# learn-geospatial

./: .gitignore  README.md  docker-compose.yml
api/: .gitignore  Startup.cs  api.csproj  appsettings.Development.json
api/Controllers/: DataController.cs
api/Data/: ClusterItem.cs  PostGisDbContext.cs  PublicArt.cs
api/Properties/: launchSettings.json
app/: nuxt.config.js  package.json  tsconfig.json
app/layouts/: default.vue
app/pages/: index.vue
notebooks/: .gitignore  h3.ipynb  pyproject.toml
postgis/: Dockerfile  initdb-extensions.sh
postgis/data/: public-art-open-data-2021-03-17.csv  public-art.sql
