[tool.poetry]
name = "h3-notebooks"
version = "0.1.0"
description = ""
authors = ["Shaw Innes <shaw@immortal.net.au>"]

[tool.poetry.dependencies]
python = "^3.9"
h3 = "^3.7.3"
pandas = "^1.3.3"
geopandas = "^0.9.0"
descartes = "^1.1.0"
folium = "^0.12.1"
jupyterlab = "^3.1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
